<resources>
    <string name="app_name">Diploma</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="signin">Войти</string>
    <string name="signup">Регистрация</string>
    <string name="asguest">Войти как гость</string>
    <string name="sign_in">Sign in</string>
    <string name="register_now">Register now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_not_verified">Email Not Verified!</string>
    <string name="verify_now">Verify Now</string>
    <string name="required_amount">Required amount</string>
    <string name="description_of_the_project">Description of the project</string>
    <string name="create">Create</string>
    <string-array name="categories">
        <item>"IT"</item>
        <item>"Sport"</item>
        <item>"Culture"</item>
        <item>Commerce</item>
        <item>Chraity1</item>
        <item>Chraity2</item>
        <item>Chraity3</item>
        <item>Chraity4</item>
        <item>Chraity5</item>
    </string-array>
</resources>