<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcomepage"
    tools:context=".WelcomePage">


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="495px"
        android:layout_height="150px"
        android:layout_marginLeft="30px"
        android:layout_marginTop="1580px"
        android:text="@string/signin"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="495px"
        android:layout_height="150px"
        android:layout_marginLeft="555px"
        android:layout_marginTop="1580px"
        android:text="@string/signup"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="1020px"
        android:layout_height="150px"
        android:layout_marginTop="1740px"
        android:layout_marginLeft="30px"
        android:text="@string/asguest"
        tools:ignore="MissingConstraints"/>

</RelativeLayout>